# reaxpro-workflow-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile.api  Dockerfile.catalyticfoam  Dockerfile.docs  Dockerfile.singularity  LICENSE  README.md  docker-compose.dev.yml  docker-compose.marketplace.yml  docker-compose.prod.yml  docker-compose.singularity.yml  docker-compose.yml  docker_entrypoint.sh  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: Makefile
docs/source/: conf.py  index.md  installation.md  quickstart.md  restapi.md  usecases.md
examples/: data-sink-app-pes-exploration.ipynb  data-sink-app-process-search.ipynb
osp/: __init__.py
osp/app/: __init__.py  click.py  dependencies.py  main.py  models.py  s3.py  tasks.py
osp/core/: __init__.py
osp/core/ontology/docs/: __init__.py  crystallography.yml
osp/settings/: __init__.py
osp/utilities/: __init__.py  arcp.py  boto3.py  exceptions.py  helper.py  load.py  minio.py
osp/wrappers/: __init__.py
osp/wrappers/celery_workflow_wrapper/: __init__.py  celery_workflow_engine.py  celery_workflow_wrapper.py
singularity/: .env.example  cmdline-config.yml.template  enter-reaxpro.sh  kill_databases.sh  kill_processes.sh  pull-minio.sh  pull-reaxpro.sh  pull-redis.sh  run-ams.sh  run-catalytic.sh  run-databases.sh  run-fastapi.sh  run-first-launch.sh  run-headworker.sh  run-minio.sh  run-reaxpro.sh  run-redis.sh  run-zacros.sh
