[metadata]
name = reaxpro-workflow-service
version = v0.0.0
author = Fraunhofer IWM
author_email = matthias.bueschelberger@iwm.fraunhofer.de
description = A package running semantically enriched workflows with SimPhoNy and Celery
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    shieldapi >= 1.0.0
    celery>=5.2.3,<6
    fastapi-plugins~=0.11.0
    osp-core >= 3.8.0,<4
    fastapi==0.92.0
    python-multipart
    httpx>=0.23.3
    minio>=7.1.15
    uvicorn
    typing-extensions
    click
    boto3
    arcp


[options.extras_require]
dev =
    bumpver==2021.1114
    dunamai==1.7.0
pre_commit =
    pre-commit==2.15.0
    pylint
tests =
    pytest==6.2.5
    pytest-celery
    pytest-mock
wrappers =
    simphony-catalytic>=1.1.1
docs =
    sphinx==3.5.3
    myst-parser==0.15.2
    sphinx_rtd_theme==0.5.2
    sphinxcontrib-plantuml==0.20.1
    nbsphinx==0.8.2
    sphinx-copybutton==0.3.1
    ipython==7.22.0
    jupyter==1.0.0
    sphinx-autobuild==2021.3.14
    sphinx-panels==0.5.2
    jinja2==3.0.3
    sphinx-markdown-tables
    sphinxcontrib-redoc==1.6.0


[options.package_data]
osp.core.ontology.docs = osp/core/ontology/docs/*.yml

[bumpver]
current_version = "v0.0.0"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
setup.cfg =
    version = {version}
